Table "dbo"."users" {
  "user_id" int(10) [pk, not null, increment]
  "username" varchar(50) [unique, not null]
  "email" varchar(100) [unique, not null, check: `[email] like '%_@_%._%'`]
  "password_hash" varchar(255) [not null]
  "first_name" varchar(50)
  "last_name" varchar(50)
  "full_name" varchar(100)
  "full_name_lower" varchar(100)
  "date_of_birth" date [check: `[date_of_birth]<=dateadd(year,(-13),getdate())`]
  "created_at" datetime2 [default: `getdate()`]
  "last_login" datetime2
  "is_active" bit [default: 1]

  Indexes {
    email [type: nonclustered, name: "idx_users_email"]
    full_name [type: nonclustered, name: "idx_users_full_name"]
    (is_active, full_name_lower) [type: nonclustered, name: "idx_users_is_active_full_name"]
  }
}

Table "dbo"."products" {
  "product_id" int(10) [pk, not null, increment]
  "name" varchar(100) [not null]
  "description" text
  "price" decimal(10,2) [not null, check: `[price]>(0)`]
  "stock_quantity" int(10) [not null, check: `[stock_quantity]>=(0)`, default: 0]
  "category" varchar(50)
  "created_at" datetime2 [default: `getdate()`]
  "updated_at" datetime2 [default: `getdate()`]
  "is_available" bit [default: 1]

  Indexes {
    category [type: nonclustered, name: "idx_products_category"]
  }
}

Table "dbo"."orders" {
  "order_id" int(10) [pk, not null, increment]
  "user_id" int(10) [not null]
  "order_date" datetime2 [default: `getdate()`]
  "total_amount" decimal(12,2) [not null, check: `[total_amount]>(0)`]
  "status" varchar(20) [check: `[status]='cancelled' OR [status]='delivered' OR [status]='shipped' OR [status]='processing' OR [status]='pending'`, default: 'pending']
  "shipping_address" text [not null]
  "billing_address" text [not null]

  Indexes {
    (user_id, order_date) [type: nonclustered, name: "idx_orders_user_date"]
  }
}

Table "dbo"."order_items" {
  "order_item_id" int(10) [pk, not null, increment]
  "order_id" int(10) [unique, not null]
  "product_id" int(10) [unique, not null]
  "quantity" int(10) [not null, check: `[quantity]>(0)`]
  "unit_price" decimal(10,2) [not null, check: `[unit_price]>(0)`]

  Indexes {
    (order_id, product_id) [type: nonclustered, name: "idx_order_items_order_product"]
  }
}

Table "dbo"."StringTypes" {
  "Id" int(10) [pk, not null, increment]
  "CharField" char(10) [default: 'N/A']
  "VarcharField" varchar(50) [default: '{"default_key": "default_value"}']
  "VarcharMaxField" varchar(MAX) [default: 'N/A']
  "TextField" text [default: 'N/A']
  "NCharField" nchar(10) [default: `N'N/A'`]
  "NVarCharField" nvarchar(50) [default: `N'N/A'`]
  "NVarCharMaxField" nvarchar(MAX) [default: `N'N/A'`]
  "NTextField" ntext [default: `N'N/A'`]
}

Table "dbo"."NumberTypes" {
  "ID" int(10) [pk, not null, increment]
  "TINYINTCol" tinyint(3) [default: 0]
  "SMALLINTCol" smallint(5) [default: 0]
  "INTCol" int(10) [default: 0]
  "BIGINTCol" bigint(19) [default: 0]
  "DECIMALCol" decimal(10,2) [default: 0.00]
  "NUMERICCol" numeric(10,2) [default: 0.00]
  "FLOATCol" float(53) [default: 0.0]
  "REALCol" real(24) [default: 0.0]
  "BITCol" bit [default: 0]
}

Table "dbo"."NumberTypesNoDefault" {
  "ID" int(10) [pk, not null, increment]
  "TINYINTCol" tinyint(3)
  "SMALLINTCol" smallint(5)
  "INTCol" int(10)
  "BIGINTCol" bigint(19)
  "DECIMALCol" decimal(10,2)
  "NUMERICCol" numeric(10,2)
  "FLOATCol" float(53)
  "REALCol" real(24)
  "BITCol" bit
}

Table "dbo"."DatetimeTypes" {
  "ID" int(10) [pk, not null, increment]
  "DATECol" date [default: `getdate()`]
  "TIMECol" time [default: `CONVERT([time],getdate())`]
  "DATETIMECol" datetime [default: `getdate()`]
  "DATETIME2Col" datetime2 [default: `sysdatetime()`]
  "SMALLDATETIMECol" smalldatetime [default: `getdate()`]
  "ROWVERSIONCol" timestamp [not null]
  "DATETIMEOFFSETCol" datetimeoffset [default: `sysdatetimeoffset()`]
}

Table "dbo"."ObjectTypes" {
  "Id" int(10) [pk, not null, increment]
  "XmlField" xml [default: '''<Books>
    <Book>
      <Title>The Great Gatsby</Title>
      <Author>F. Scott Fitzgerald</Author>
      <Year>1925</Year>
      <Price>10.99</Price>
      <Publisher>Scribner</Publisher>
      <Location>New York</Location>
      <Genre>Fiction</Genre>
      <Subgenre>Classic</Subgenre>
    </Book>
    <Book>
      <Title>1984</Title>
      <Author>George Orwell</Author>
      <Year>1949</Year>
      <Price>8.99</Price>
      <Publisher>Secker & Warburg</Publisher>
      <Location>London</Location>
      <Genre>Dystopian</Genre>
      <Subgenre>Political Fiction</Subgenre>
    </Book>
  </Books>''']
  "JsonField" nvarchar(MAX) [default: `N'{"defaultKey": "defaultValue", "status": "active", "count": 0}'`]
  "BinaryField" binary(50) [default: `0x00`]
  "VarBinaryField" varbinary(50) [default: `0x00`]
  "VarBinaryMaxField" varbinary(MAX) [default: `0x00`]
  "ImageField" image [default: `0x00`]
}

Table "dbo"."gender_reference" {
  "value" nvarchar(10) [pk, not null]
}

Table "dbo"."user_define_data_types" {
  "id" int(10) [pk, not null, increment]
  "name" nvarchar(50)
  "gender" nvarchar(10) [check: `[gender]='Other' OR [gender]='Female' OR [gender]='Male'`]
  "age_start" int(10)
  "age_end" int(10)
  "height" float(53)
  "weight" float(53)

  Checks {
    `[age_start]<=[age_end]` [name: 'chk_age_range']
  }
}

Table "dbo"."table_with_comments" {
  "id" int(10) [pk, not null, increment, note: 'Unique identifier for each item.']
  "name" varchar(100) [note: 'Name of the item.']
  "description" text [note: '''Item\'s description''']
  "created_at" datetime2 [default: `getdate()`, note: 'Timestamp when the item was created.']
  Note: 'This table stores information about various items.'
}

Table "dbo"."table_with_composite_primary_and_unique_indexes" {
  "col1" int(10) [pk, not null]
  "col2" int(10) [pk, not null]
  "col3" int(10) [unique]
  "col4" int(10) [unique]
}

Table "dbo"."Authors" {
  "AuthorID" int(10) [pk, not null]
  "NationalityID" int(10) [pk, not null]
  "AuthorName" nvarchar(100) [unique]
  "BirthYear" int(10) [unique]
}

Table "dbo"."Books" {
  "BookID" int(10) [pk, not null]
  "AuthorID" int(10) [pk, not null]
  "NationalityID" int(10)
  "ISBN" nvarchar(20) [unique]
  "Title" nvarchar(200)
}

Table "dbo"."AddressInfo" {
  "AddressID" uniqueidentifier(16) [not null]
  "AddressFormatID" uniqueidentifier(16) [not null]

  Checks {
    `([AddressID]='176029FA-D6D3-49E1-A48C-000000000002' OR [AddressID]='176029FA-D6D3-49E1-A48C-000000000001') AND ([AddressFormatID]='176029FA-D6D3-49E1-A48C-000000000002' OR [AddressFormatID]='176029FA-D6D3-49E1-A48C-000000000001')` [name: 'CK_Address_Valid']
  }
}

Table "dbo"."AddressInfo2" {
  "A1" uniqueidentifier(16) [not null]
  "A2" uniqueidentifier(16) [not null]
  "A3" uniqueidentifier(16) [not null]
  "A4" uniqueidentifier(16) [not null]

  Checks {
    `([A1]='333' OR [A1]='2222' OR [A1]='1111') AND ([A2]='2222' OR [A2]='1111') AND ([A3]='1111' OR [A3]='2222') AND ([A4]='3333' OR [A4]='2222')` [name: 'CK_Address_Valid2']
  }
}

Table "dbo"."TestDescriptionTable" {
  "Id" int(10) [note: 'Primary key identifier.']
  "Name" nvarchar(100) [check: `len([Name])>(6)`, note: 'Name of the entity.']
  Note: 'This is the custom comment name on table.'
}

Ref "FK_AuthorNationality":"dbo"."Authors".("AuthorID", "NationalityID") < "dbo"."Books".("AuthorID", "NationalityID")

Ref "fk_product":"dbo"."products"."product_id" < "dbo"."order_items"."product_id" [update: cascade]

Ref "fk_order":"dbo"."orders"."order_id" < "dbo"."order_items"."order_id" [update: cascade, delete: cascade]

Ref "fk_user":"dbo"."users"."user_id" < "dbo"."orders"."user_id" [update: cascade, delete: cascade]

Ref "fk_gender":"dbo"."gender_reference"."value" < "dbo"."user_define_data_types"."gender"
